test/libsolidity/syntaxTests/inheritance/interface/contract_base.sol
contract C {}
interface I is C {}

// ----
// TypeError 6536: (29-30): Interfaces can only inherit from other interfaces.
